k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homepage

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
  labels:
    app.kubernetes.io/name: homepage-react
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: homepage-react
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homepage-react
    spec:
      containers:
      - name: homepage
        image: ghcr.io/thomasbuchinger/homepage-react:main
        ports:
        - name: http
          containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
spec:
  selector:
    app.kubernetes.io/name: homepage-react
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
spec:
  rules:
  - host: "status.buc.sh"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: homepage
            port:
              number: 80
  - host: "status.10.0.0.16.nip.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: homepage
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-homepage-egress-to-internet
  namespace: homepage
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: homepge-react
  policyTypes:
    - Egress
  egress:
  - to:
    - ipBlock:
        cidr: "0.0.0.0/0"
        except:
        - 10.0.0.0/24
